Fix for horizontal scroll

--- a/css/main.scss
+++ b/css/main.scss
@@ -345,6 +345,7 @@ p {
         position: sticky;
         top: 0;
         padding: 5rem 5rem 0 0;
+        height: 100vh;
     }
 
     .final-fantasy {
